--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -7,12 +7,12 @@
 <body>
     <div class="container">
         <h2>Linkify for Circuit</h2>
-        <p>Adding this extension to your Circuit account on <i><%= domain %></i> will update your post by converting predefined text strings with links.</p>
-        <p>For example when post a message containing a JIRA issue, it gets replaced by a link to that JIRA issue.</p>
+        <p>Adding this extension to your Circuit account on <i><%= domain %></i> will update your posts by converting predefined text strings with links.</p>
+        <p>For example when posting a message containing a JIRA issue, it gets replaced by a link to that JIRA issue.</p>
         <p>Your post:<br>
         <img src="before.jpg">
         </p>
-        <p>Immediately updated by linkifier on your behalf:<br>
+        <p>Updated by Circuit Linkify on your behalf:<br>
         <img src="after.jpg">
         </p>
         <br>
