--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -33,7 +33,7 @@
             <input type="submit" class="btn btn-primary" id="submit" value="Save"/>
         </form>
         <% } else{ %>  
-        <a class="btn btn-primary" href="/login">Login with Circuit</a>
+        <a class="btn btn-primary" href="/login">Add to Circuit</a>
         <% } %>
     </div>
     <footer class="footer">
