--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -19,6 +19,7 @@
         <% if(authenticated){ %>
         <h3>Configure</h3>
         <p>Logged in as <%= displayName %>. <a href="/logout">Logout</a></p>
+        <p>Select the linkifiers and save.</p>
         <form method="post" action="/activate">
             <fieldset>
                 <ul>
